crates/uitest/fixtures/ty_check/binary.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/binary.fe
---
error[8-0000]: type mismatch
  ┌─ binary.fe:6:6
  │
6 │     (f && f) || f
  │      ^ expected `bool`, but `Foo` is given

error[8-0000]: type mismatch
  ┌─ binary.fe:6:11
  │
6 │     (f && f) || f
  │           ^ expected `bool`, but `Foo` is given

error[8-0000]: type mismatch
  ┌─ binary.fe:6:17
  │
6 │     (f && f) || f
  │                 ^ expected `bool`, but `Foo` is given

error[8-0016]: `core::ops::Add` trait is not implemented
  ┌─ binary.fe:4:5
  │
4 │     f + f
  │     ^^^^^
  │     │
  │     `+` can't be applied to `Foo`
  │     Try implementing `core::ops::Add` for `Foo`

error[8-0016]: `core::ops::Eq` trait is not implemented
  ┌─ binary.fe:7:5
  │
7 │     f == f
  │     ^^^^^^
  │     │
  │     `==` can't be applied to `Foo`
  │     Try implementing `core::ops::Eq` for `Foo`

error[8-0016]: `core::ops::Ord` trait is not implemented
  ┌─ binary.fe:8:5
  │
8 │     f < f
  │     ^^^^^
  │     │
  │     `<` can't be applied to `Foo`
  │     Try implementing `core::ops::Ord` for `Foo`
